<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_10sdp">



    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:id="@+id/ivStuAdd"
        android:src="@drawable/unknown_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNameTitle"
        app:layout_constraintTop_toTopOf="@id/edName"
        app:layout_constraintBottom_toBottomOf="@id/edName"
        app:layout_constraintTop_toBottomOf="@id/ivStuAdd"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edName"
        android:inputType="text"
        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/ivStuAdd"
        app:layout_constraintStart_toEndOf="@id/tvNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/name_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGenderTitle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edName"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/stu_gender"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvGenderTitle"
        android:paddingLeft="20dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_male"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_female"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/btn_submit"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="@dimen/_10sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>